# sdlc_mcp_server

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  setup-dev-environment.sh
.claude/agents/: convention-checker.md  spec-validator.md  test-reporter.md
.claude/commands/: analyze-repo.md  build-phase.md  spec-arch.md  spec-claudemd.md  spec-interview.md  validate-phase.md
docs/: ARCHITECTURE.md  PRD.md
src/e2e_mcp_server/: __main__.py  config.py  content_generation.py  github_client.py  jira_client.py  server.py  test_runner.py  workflow_state.py
tests/: test_config.py  test_content_generation.py  test_content_generation_stories.py  test_github_client.py  test_jira_client.py  test_jira_client_feature.py  test_jira_client_session.py  test_jira_client_story.py  test_jira_client_update_feature.py  test_server.py  test_server_approve_feature.py  test_server_approve_story_set.py  test_server_create_implementation_branch.py  test_server_generate_stories.py  test_server_proceed.py  test_server_start_feature.py  test_test_runner.py  test_workflow_state.py
